General:
- Updated to a much newer version of BuildingHelper, fixing several bugs and improving the construction of buildings.